2010-12-27  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #16857: Refine new labels in pages and tt_content TCE forms (Thanks to Mark Lehm and Jeff Segars for helping)

2010-12-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16852: Bugfix: Grid View must be combined with Column View and get some visual usability enhancements (Thanks to Jo Hasenau)
	* Add sysext pagetree to required extension list
	* Fixed bug #16387: Optimize stdWrap usage for TypoScript content element QTOBJECT (Thanks to Jo Hasenau)
	* Fixed bug #16429: Optimize stdWrap usage for tslib_content (Thanks to Jo Hasenau)
	* Fixed bug #16731: Fill the color gap between module menu and tree-less modules (Thanks to Steffen Gebert)
	* Removed sysext fal
	* Fixed bug #16399: Optimize stdWrap usage for TypoScript content element USER_INT (Thanks to Jo Hasenau)
	* Fixed bug #16400: Optimize stdWrap usage for TypoScript content element TEXT (Thanks to Jo Hasenau)
	* Fixed bug #16401: Optimize stdWrap usage for TypoScript content element TEMPLATE (Thanks to Jo Hasenau)
	* Fixed bug #16402: Optimize stdWrap usage for TypoScript content element SVG (Thanks to Jo Hasenau)
	* Fixed bug #16386: Optimize stdWrap usage for TypoScript content elements PHP_SCRIPT_INT and PHP_SCRIPT_EXT (Thanks to Jo Hasenau)
	* Fixed bug #16404: Optimize stdWrap usage for TypoScript content element SWFOBJECT (Thanks to Jo Hasenau)
	* Fixed bug #16406: Optimize stdWrap usage for TypoScript content element SEARCHRESULT (Thanks to Jo Hasenau)
	* Fixed bug #16385: Optimize stdWrap usage for TypoScript content element PHP_SCRIPT (Thanks to Jo Hasenau)

2010-12-27  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16481: Live search uses hardcoded strings and has unused strings
	* Fixed bug #16681: Live search should reset when an iframe gains focus
	* Fixed bug #15853: Improve the look of the admin panel (Thanks to Dmitry Dulepov)

2010-12-27  Steffen Ritter  <typo3@steffen-ritter.net>
