@@ -4,6 +4,7 @@
 
 2010-12-27  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16384: Optimize stdWrap usage for TypoScript content element OTABLE (Thanks to Jo Hasenau)
 	* Fixed bug #16852: Bugfix: Grid View must be combined with Column View and get some visual usability enhancements (Thanks to Jo Hasenau)
 	* Add sysext pagetree to required extension list
 	* Fixed bug #16387: Optimize stdWrap usage for TypoScript content element QTOBJECT (Thanks to Jo Hasenau)
